Added files via upload
removed alert box for the GEOjson

--- a/map.html
+++ b/map.html
@@ -49,7 +49,7 @@ var newFeature = {
 }
 
 
-alert(JSON.stringify(geojson));
+//alert(JSON.stringify(geojson));
 map.featureLayer.setGeoJSON(geojson);
 var something = window.open("data:text/json," + encodeURIComponent(JSON.stringify(geojson)),
                        "_blank");
