--- a/map.html
+++ b/map.html
@@ -13,12 +13,11 @@
 </style>
 </head>
 <body>
+<textarea  rows="100" cols="100" type="text" id="geojson" > </textarea>
 
-<div id='map'></div>
 <script>
 
 
-L.mapbox.accessToken = 'pk.eyJ1IjoiZHlsYW5rb2xzb24iLCJhIjoiY2ltcjRmeGQwMDB0dXZxbHU0cXI1YTA2NyJ9.uP3SVVhhYrJ1AG5EgkxSsw';
 
 
 	
@@ -28,8 +27,7 @@ var decodedData = window.atob(encodedData); // decode the string
 var json = JSON.parse(decodedData);
 var data = JSON.parse(decodedData);
 
-var map = L.mapbox.map('map', 'mapbox.streets')
-    .setView([data[0].lat, data[0].lng], 4);
+
 
 var geojson = {};
 geojson['type'] = 'FeatureCollection';
@@ -48,9 +46,9 @@ var newFeature = {
 
 }
 
+document.getElementById('geojson').value = JSON.stringify(geojson);
 
-//alert(JSON.stringify(geojson));
-map.featureLayer.setGeoJSON(geojson);
+
 var something = window.open("data:text/json," + encodeURIComponent(JSON.stringify(geojson)),
                        "_blank");
 something.focus();
