Fixed bug when removing items from list

--- a/map.html
+++ b/map.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>A simple map</title>
+<title>GEO JSON</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
 <script src='script.js'></script>
@@ -13,6 +13,9 @@
 </style>
 </head>
 <body>
+Copy and paste! Convert to .SHP @ <a href="https://ogre.adc4gis.com/"> Ogre </a>
+<hr>
+<br>
 <textarea  rows="100" cols="100" type="text" id="geojson" > </textarea>
 
 <script>
