--- a/readme.html
+++ b/readme.html
@@ -1,4 +1,12 @@
-links
+This tool has only been tested in Chrome. Open the select.html file and enter the location you want to 
+work with. Address and zip codes can be used in the first box. Search using the keyword or/and the type 
+drop down list. Click search for objects and in the list at the bottom you can remove certain results if need be.
+Clicking the map will move the radius bubble around allowing for additional searches. When done hit send to GEO JSOn
+and a new window will open with the GEO JSON code.
+
+
+
+Links for Development
 
 
 http://johnsardine.com/freebies/dl-html-css/simple-little-tab/
@@ -10,9 +18,8 @@ https://gist.github.com/mapsam/7320ccb2aba0ac372050
 
 
 //feature list
-remove duplicates from search results list
+make it so I can click inside the circle
 create help box on main screen
-auto download GEO JSON
 edit features
 select what details to add
 more details to array 
