--- a/select.html
+++ b/select.html
@@ -141,7 +141,7 @@ $(document).ready(function(){
 		 
 	   
 	    <div id="button1" class="button" onclick="findPlaces(); return false;">Search for objects</div>
-		<div id="reload" class="button" onclick="reloadList();">Reload list after search</div>
+		<!--<div id="reload" class="button" onclick="reloadList();">Reload list after search</div>--->
 		<div id="clear" class="button" onclick="clearList();">Clear List</div>
 		<div id="send" class="button" onclick="sendList();">Send to Geo JSON</div>
 	</DIV>
